--- a/Source/Enter.UI/Styles/_normalize.scss
+++ b/Source/Enter.UI/Styles/_normalize.scss
@@ -9,7 +9,7 @@
  */
 
 html {
-    line-height: var(--ent-line-height-base); /* 1 */
+    line-height: var(--ent-line-height); /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
 }
 
