--- a/Source/Enter.UI/Styles/themes/basic.theme.scss
+++ b/Source/Enter.UI/Styles/themes/basic.theme.scss
@@ -16,19 +16,17 @@
   --ent-size-xxl: 32px;
   --ent-size-xxxl: 48px;
 
-  --ent-font-size-xs: 0.625rem;
-  --ent-font-size-sm: 0.75rem;
-  --ent-font-size: 0.875rem;
-  --ent-font-size-lg: 1rem;
-  --ent-font-size-xl: 1.125rem;
-  --ent-font-size-xxl: 1.25rem;
+  --ent-font-size-xs: 0.75rem;
+  --ent-font-size-sm: 0.875rem;
+  --ent-font-size: 1rem;
+  --ent-font-size-lg: 1.125rem;
+  --ent-font-size-xl: 1.25rem;
+  --ent-font-size-xxl: 1.375rem;
+  --ent-font-size-xxxl: 1.5rem;
 
-  --ent-line-height-base-xs: 0.875rem;     // 14px
-  --ent-line-height-base-sm: 1rem; // 16px
-  --ent-line-height-base: 1.125rem;     // 18px
-  --ent-line-height-base-lg: 1.25rem; // 20px
-  --ent-line-height-base-xl: 1.375rem;   // 22px
-  --ent-line-height-base-xxl: 1.5rem;// 24px
+
+  --ent-line-height: 1.5rem;
+
 
   --ent-stroke-thin: 1px;
   --ent-stroke-thick: 2px;
