--- a/Source/Enter.UI/Styles/Enter.Ui.scss
+++ b/Source/Enter.UI/Styles/Enter.Ui.scss
@@ -11,17 +11,21 @@
 
 html,
 body {
-  box-sizing: border-box;
-  background-color: var(--ent-bg-body);
-  color: var(--ent-color-body);
-  font-size: 16px;
   padding: 0;
   margin: 0;
 }
+
+.ent-ui {
+  background-color: var(--ent-bg-body);
+  color: var(--ent-color-body);  
+}
+
 #app {
   display: flex;
 }
-
+*, ::after, ::before {
+  box-sizing: border-box;
+}
 [dir="rtl"] body {
   direction: rtl;
 }
