--- a/Source/Enter.UI/Styles/components/_ent_button.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_button.component.scss
@@ -5,12 +5,11 @@ todo:
 */
 
 :root {
-  --ent-btn-font-size: 14px;
-  --ent-btn-line-height: 20px;
+  --ent-btn-font-size: var(--ent-font-size);
 
-  --ent-btn-space-x: 11px;
-  --ent-btn-space-y: 5px;
-  --ent-btn-space-b: 8px;
+  --ent-btn-space-x: var(--ent-size-md);
+  --ent-btn-space-b: var(--ent-size-sm);
+  --ent-btn-space-y: var(--ent-size-xs);
 
   --ent-btn-bg: var(--ent-bg-neutral);
   --ent-btn-bg-hover: var(--ent-bg-neutral-highlight);
@@ -34,13 +33,12 @@ todo:
   vertical-align: middle;
   margin: 0;
   font-size: var(--ent-btn-font-size);
-  line-height: var(--ent-btn-line-height);
   background-color: var(--ent-btn-bg);
   color: var(--ent-btn-fg);
   border: var(--ent-btn-stroke-width) solid var(--ent-btn-stroke);
   font-family: var(--fontFamilyBase);
   outline-style: none;
-  padding: var(--ent-btn-space-y) var(--ent-btn-space-x);
+  padding: calc( var(--ent-btn-space-y) - var(--ent-btn-stroke-width)) var(--ent-btn-space-x);
   border-radius: var(--ent-btn-border-radius);
   cursor: pointer;
   //min-width: 96px;
@@ -88,8 +86,8 @@ todo:
   }
 
   .icon-wrapper {
-    width: var(--ent-btn-line-height);
-    height: var(--ent-btn-line-height);
+    width: var(--ent-line-height);
+    height: var(--ent-line-height);
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -161,23 +159,16 @@ todo:
 
 .ent-btn-size-sm {
 
-  --ent-btn-font-size: 12px;
-  --ent-btn-line-height: 16px;
-
-  --ent-btn-space-x: 7px;
-  --ent-btn-space-y: 3px;
-  --ent-btn-space-b: 6px;
-
+  --ent-btn-space-x: var(--ent-size-sm);
+  --ent-btn-space-b: var(--ent-size-xs);
+  --ent-btn-space-y: var(--ent-size-xxs);
 
 }
 
 .ent-btn-size-lg {
 
-  --ent-btn-font-size: 16px;
-  --ent-btn-line-height: 24px;
-
-  --ent-btn-space-x: 15px;
-  --ent-btn-space-y: 7px;
-  --ent-btn-space-b: 12px;
+  --ent-btn-space-x: var(--ent-size-lg);
+  --ent-btn-space-b: var(--ent-size-md);
+  --ent-btn-space-y: var(--ent-size-sm);
 
 }
