--- a/Source/Enter.UI/Styles/components/_ent_icon.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_icon.component.scss
@@ -1,7 +1,7 @@
 .ent-icon {
-  font-size: 14px;
-  height: 14px;
-  width: 14px;
+  font-size: var(--ent-font-size);
+  height: var(--ent-size-md);
+  width: var(--ent-size-md);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,12 +10,12 @@
 }
 
 .ent-icon-size-sm {
-  font-size: 12px;
-  height: 12px;
-  width: 12px;
+  font-size: var(--ent-font-size-sm);
+  height: var(--ent-size-sm);
+  width: var(--ent-size-sm);
 }
 .ent-icon-size-lg {
-  font-size: 16px;
-  height: 16px;
-  width: 16px;
+  font-size: var(--ent-font-size-lg);
+  height: var(--ent-size-lg);
+  width: var(--ent-size-lg);
 }
