--- a/example/Enter.Dashboard/Pages/Documents/FormLayout.razor
+++ b/example/Enter.Dashboard/Pages/Documents/FormLayout.razor
@@ -17,7 +17,7 @@
                 <DataAnnotationsValidator />
                 <div class="row">
                     <EntInputGroup For="()=>Input.Id" Label="شناسه" class="tablet:col-1/3 mb-4 ">
-                        <EntInputText Size="EntInputSize.Large"  @bind-Value="Input.Id" Icon="@EntIconName.ChevronLeft" />
+                        <EntInputText   @bind-Value="Input.Id" Icon="@EntIconName.Dashboard" />
                     </EntInputGroup>
                      <EntInputGroup For="()=>Input.User" Label="نام" class="tablet:col-1/3 mb-4">
                       
